[metadata]
name = TruthAutonomy
version = 1.2.0
author = TruthIntel
author_email = truthintell2025@gmail.com
description = A Tool to create posts on TruthSocial which can be used in ai agents 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TruthIntel/TruthAutonomy
project_urls =
    Bug Tracker = https://github.com/TruthIntel/TruthAutonomy/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    cloudscraper

[options.extras_require]
dev =
    pytest
    black
    isort
    flake8
    mypy
